change CSS on panels to remove double scrollbar issue #300 (#325)
- in filtered-toc plugin, scss to add scrolling on headings only
- prevent title disappearing upwards
- in page-styling, scss remove scroll on main panel
- css generated from scss

--- a/Website/plugins/filtered-toc/css/filtered-toc-light.css
+++ b/Website/plugins/filtered-toc/css/filtered-toc-light.css
@@ -2,6 +2,8 @@
   background-color: #f2f2f2;
   border-right: 1px solid #cccccc;
   border-bottom: 3px solid #cccccc;
+  overflow-y: scroll;
+  max-height: 75vh;
 }
 .raku-sidebar .input::placeholder, .raku-sidebar .textarea::placeholder, .raku-sidebar .select select::placeholder {
   color: black;
